--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>صفحه اصلی</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/swiper.min.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/bootstrap.min.css'>
+    <link rel='stylesheet' href='css/swiper.min.css'>
+    <link rel='stylesheet' href='css/bootstrap.min.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/styles.css'>
 </head>
 <body>
@@ -305,11 +305,11 @@
               <!--  -->
               <div class="container py-5">
                 <h1 class="fs-40 text-main2 font-bold">خدماتی که ارائه میدهیم</h1>
-               <div class="col-10">
+               <div class="col-10 position-relative">
                 <div class="swiper services py-5 px-3">
                  <div class="swiper-wrapper">
                    <div class="swiper-slide">
-                     <div class="rounded-20 border-main p-4 position-relative text-center">
+                     <div class="rounded-20 border-main p-4 position-relative text-center bg-white">
                       <!-- stars -->
                        <div class="w-35 h-35 position-absolute -top-18 -right-17 rounded-circle bg-white d-flex align-items-center justify-content-center">
                         <svg width="26" height="27" viewBox="0 0 26 27" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -334,7 +334,7 @@
                      </div>
                    </div>
                    <div class="swiper-slide">
-                     <div class="rounded-20 border-main p-4 position-relative text-center">
+                     <div class="rounded-20 border-main p-4 position-relative text-center bg-white">
                       <!-- stars -->
                        <div class="w-35 h-35 position-absolute -top-18 -right-17 rounded-circle bg-white d-flex align-items-center justify-content-center">
                         <svg width="26" height="27" viewBox="0 0 26 27" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -368,7 +368,7 @@
                      </div>
                    </div>
                    <div class="swiper-slide">
-                     <div class="rounded-20 border-main p-4 position-relative text-center">
+                     <div class="rounded-20 border-main p-4 position-relative text-center bg-white">
                       <!-- stars -->
                        <div class="w-35 h-35 position-absolute -top-18 -right-17 rounded-circle bg-white d-flex align-items-center justify-content-center">
                         <svg width="26" height="27" viewBox="0 0 26 27" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -407,7 +407,215 @@
               </div>
              </section>
 
+             <!-- why us -->
+              <section>
+                <div class="container">
+                  <div class="row g-5 align-items-center">
+                    <div class="col-md-6">
+                      <h5 class="font-bold text-second fs-20">ما با بقیه فرق داریم!</h5>
+                      <h2 class="fs-32 font-bold mt-3 text-main2">داستان شروع و تجربه های اکسین صنعت 
+                        در سال های اخیر</h2>
+                        <p class="mt-4 fw-bold text-secondary text-justify">
+                          لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد
+                        </p>
+                        <div class="mt-4">
+                         <div class="d-flex align-items-center gap-2 mb-2">
+                          <img alt="icon" src="img/svg/icon.svg">
+                          <p class="mb-0 fw-bold">تامین اجناس با بالاترین کیفیت</p>
+                         </div>
+                         <div class="d-flex align-items-center gap-2 mb-2">
+                          <img alt="icon" src="img/svg/icon.svg">
+                          <p class="mb-0 fw-bold">تامین اجناس با بالاترین کیفیت</p>
+                         </div>
+                         <div class="d-flex align-items-center gap-2 mb-2">
+                          <img alt="icon" src="img/svg/icon.svg">
+                          <p class="mb-0 fw-bold">تامین اجناس با بالاترین کیفیت</p>
+                         </div>
+                         <div class="d-flex align-items-center gap-2 mb-2">
+                          <img alt="icon" src="img/svg/icon.svg">
+                          <p class="mb-0 fw-bold">تامین اجناس با بالاترین کیفیت</p>
+                         </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="position-relative">
+                        <div class="position-absolute bottom-47 -right-80 m-5 me-0 d-inline-flex align-items-center gap-3 bg-white rounded-10 p-3 shadow-1">
+                          <div class="w-64 h-64 flex-shrink-0 rounded-5 d-flex align-items-center justify-content-center bg-second">
+                            <img alt="icon" src="img/svg/Group 1000006592.svg">
+                          </div>
+                          <p class="fs-20 font-bold mb-0">11 سال تجربه در زمینه کار فولاد و فلزات</p>
+                        </div>
+                        <div class="position-absolute -bottom-70 -right-140 m-5 me-0 d-inline-flex align-items-center gap-3 bg-white rounded-10 p-3 shadow-1">
+                          <p class="fs-20 font-bold mb-0">اکسین صنعت
+                            گامی نو در صنعت فولاد</p>
+                            <div class="w-64 h-64 flex-shrink-0 rounded-5 d-flex align-items-center justify-content-center bg-second">
+                              <img alt="icon" src="img/svg/Group 1000006592.svg">
+                            </div>
+                        </div>
+                        <img alt="img" src="img/Add your image here (2).png" class="img-fluid">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </section>
+
+              <!-- email -->
+               <section class="mt-5 pt-5">
+                <div class="container mt-5 position-relative">
+                  <!-- bg -->
+                   <img alt="bg" src="img/Rectangle 534.png" class="position-absolute top-0 end-0 start-0 w-100 h-100">
+                  <!--  -->
+                  <div class="mt-5 pt-4">
+                    <h1 class="fs-44 font-bold position-relative text-center text-white mt-5 pt-5">برای دریافت آخرین اخبار ایمیل خود را وارد کنید</h1>
+                    <div class="pb-5 mb-5">
+                      <div class="mb-5 pb-4">
+                        <form class="bg-white my-5 position-relative p-3 rounded-pill max-w-620 mx-auto d-flex align-items-center gap-3">
+                          <input class="fs-20 border-0 fw-bold outline-none bg-white flex-grow-1" placeholder="ایمیل خود را وارد کنید">
+                          <button class="fs-20 button-hover-2 text-white fw-bold w-190 h-60 d-flex align-items-center justify-content-center bg-second border-0 rounded-pill">
+                            <span>شروع کنید</span>
+                          </button>
+                         </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+               </section>
+
+               <!-- contact -->
+                <section class="mt-5 pt-5">
+                  <div class="container mt-4">
+                    <div class="row g-4 align-items-center">
+                      <div class="col-md-6">
+                        <img alt="img" src="img/image.png" class="img-fluid">
+                      </div>
+                      <div class="col-md-6">
+                        <h1 class="fs-40 font-bold text-main2"><span class="w-40 h-5 bg-main mb-2 d-inline-block"></span> فرم تماس با ما</h1>
+                        <p class="fs-20 text-secondary mt-3 font-bold">برای راحتی شما عزیزان میتوانید اطلاعات خود را در کادر زیر وارد کنید تا کارشناسان اکسین صنعت با شما تماس بگیرید.</p>
+                        <form class="row g-4">
+                          <div class="col-md-6">
+                            <div class="rounded-10 border bg-input p-3 d-flex align-items-center gap-3">
+                              <input placeholder="ایمیل شما" class="bg-transparent border-0 outline-none w-100 flex-grow-1 fw-bold fs-14">
+                              <img alt="icon" src="img/svg/sms.svg">
+                             </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="rounded-10 border bg-input p-3 d-flex align-items-center gap-3">
+                              <input placeholder="نام و نام خانوادگی" class="bg-transparent border-0 outline-none w-100 flex-grow-1 fw-bold fs-14">
+                              <img alt="icon" src="img/svg/user-edit.svg">
+                             </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="rounded-10 border bg-input p-3 d-flex align-items-center gap-3">
+                              <select class="bg-transparent border-0 w-100 flex-grow-1 fw-bold fs-14">
+                                <option>تعیین ساعت تماس</option>
+                                <option>18:30</option>
+                                <option>19:30</option>
+                                <option>20:30</option>
+                              </select>
+                             </div>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="rounded-10 border bg-input p-3 d-flex align-items-center gap-3">
+                              <input placeholder="شماره تلفن" class="bg-transparent border-0 outline-none w-100 flex-grow-1 fw-bold fs-14">
+                              <img alt="icon" src="img/svg/call-calling (2).svg">
+                             </div>
+                          </div>
+                          <div class="col-12">
+                            <div class="position-relative">
+                              <img alt="icon" src="img/svg/message-edit.svg" class="position-absolute start-0 m-3">
+                              <textarea rows="4" placeholder="متن پیام شما ...." class="rounded-10 border bg-input outline-none w-100 p-3 fs-14"></textarea>
+                            </div>
+                          </div>
+                          <div class="col-12">
+                            <div class="d-flex align-items-center justify-content-end gap-3">
+                              <a class="d-flex align-items-center justify-content-center h-60 px-5 button-hover-2 gap-2 rounded-10 bg-second text-white fw-bold">
+                               <p class="mb-0">09104992002</p>
+                               <img alt="icon" src="img/svg/call-calling (3).svg">
+                              </a>
+                              <button class="border-0 d-flex align-items-center justify-content-center h-60 px-5 button-hover-2 gap-2 rounded-10 bg-second text-white fw-bold">
+                                <p class="mb-0">ارسال اطلاعات</p>
+                                <img alt="icon" src="img/svg/send-2.svg">
+                              </button>
+                            </div>
+                          </div>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </section>
+
+                <!-- blog -->
+                 <section class="mt-5 pt-5">
+                  <div class="container mt-5">
+                    <h1 class="fs-40 text-center font-bold text-main2 pt-4">آخرین اخبار و منابع</h1>
+                    <div class="row g-5 mt-3 align-items-start">
+                     <div class="col-md-6">
+                       <div>
+                        <a class="d-flex align-items-center gap-4 mb-4">
+                         <div class="position-relative flex-shrink-0">
+                          <p class="fw-bold text-white mb-0 bottom-8 start-0 m-3 bg-second py-1 px-3 position-absolute rounded-pill">PRESS RELEASE</p>
+                          <img alt="img" src="img/Rectangle 33.png" class="img-fluid rounded-16 w-100">
+                         </div>
+                         <div>
+                          <p class="fs-20 font-bold text-dark mb-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</p>
+                          <p class="text-secondary fs-18 text-justify mb-0">
+                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، 
+                          </p>
+                        </div>
+                        </a>
+                        <a class="d-flex align-items-center gap-4 mb-4">
+                          <div class="position-relative flex-shrink-0">
+                           <p class="fw-bold text-white mb-0 bottom-8 start-0 m-3 bg-second py-1 px-3 position-absolute rounded-pill">NEWS</p>
+                           <img alt="img" src="img/Rectangle 34.png" class="img-fluid rounded-16 w-100">
+                          </div>
+                          <div>
+                           <p class="fs-20 font-bold text-dark mb-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</p>
+                           <p class="text-secondary fs-18 text-justify mb-0">
+                             لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، 
+                           </p>
+                         </div>
+                         </a>
+                         <a class="d-flex align-items-center gap-4">
+                          <div class="position-relative flex-shrink-0">
+                           <p class="fw-bold text-white mb-0 bottom-8 start-0 m-3 bg-second py-1 px-3 position-absolute rounded-pill">NEWS</p>
+                           <img alt="img" src="img/Group 43.png" class="img-fluid rounded-16 w-100">
+                          </div>
+                          <div>
+                           <p class="fs-20 font-bold text-dark mb-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</p>
+                           <p class="text-secondary fs-18 text-justify mb-0">
+                             لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، 
+                           </p>
+                         </div>
+                         </a>
+                       </div>
+                     </div>
+                     <div class="col-md-6">
+                      <div class="d-flex flex-column align-items-center gap-4 mb-5">
+                        <div class="position-relative flex-shrink-0 w-100">
+                         <p class="fw-bold text-white mb-0 bottom-8 start-0 m-3 bg-second py-1 px-3 position-absolute rounded-pill">NEWS</p>
+                         <img alt="img" src="img/Rectangle 32.png" class="img-fluid rounded-16 w-100">
+                        </div>
+                        <div>
+                         <p class="fs-20 font-bold text-dark mb-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است،</p>
+                         <p class="text-secondary fs-18 text-justify mb-0">
+                          لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است،  چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، 
+                         </p>
+                         <a class="text-second fw-bold mt-4 d-inline-block">خواندن ادامه</a>
+                       </div>
+                      </div>
+                     </div>
+                    </div>
+                  </div>
+                 </section>
+
       </main>
+
+      <!-- footer -->
+       <footer>
+        <div class="container">
+
+        </div>
+       </footer>
     
     <script src='js/swiper.min.js'></script>
     <script src='js/scripts.js'></script>
