--- a/index.html
+++ b/index.html
@@ -5,11 +5,51 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>صفحه اصلی</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/data.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/export-data.js"></script>
+    <script src="https://code.highcharts.com/modules/accessibility.js"></script>
     <link rel='stylesheet' href='css/swiper.min.css'>
     <link rel='stylesheet' href='css/bootstrap.min.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/styles.css'>
 </head>
 <body>
+
+  <!-- Modal -->
+<div class="modal fade p-4" id="chartModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered max-w-1200">
+    <div class="modal-content rounded-25">
+      <div class="modal-body">
+        <figure class="highcharts-figure">
+          <div id="container"></div>
+      </figure>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="ld-form d-none">
+	<div class="ld-row">
+		<label class="ld-label">
+			Enable Polling
+		</label>
+		<input type="checkbox" checked="checked" id="enablePolling"/>
+	</div>
+	<div class="ld-row">
+		<label class="ld-label">
+			Polling Time (Seconds)
+		</label>
+		<input class="ld-time-input" type="number" value="2" id="pollingTime"/>
+	</div>
+	<div class="ld-row">
+		<label class="ld-label">
+			CSV URL
+		</label>
+		<input class="ld-url-input" type="text" id="fetchURL"/>
+	</div>
+</div>
 
     <!-- header -->
      <header class="py-4">
@@ -523,7 +563,7 @@
                   <div class="swiper-button-prev"></div>
                  </div>
                  <div id="scroll-custom" class="h-450 overflow-x-hidden">
-                   <div class="position-sticky top-0 row p-3 bg-main4 font-bold fs-20 text-main2 text-center align-items-center">
+                   <div class="position-sticky z-10 top-0 row p-3 bg-main4 font-bold fs-20 text-main2 text-center align-items-center">
                     <div class="col-1">کد </div>
                     <div class="col-2">نام</div>
                     <div class="col-1">سایز</div>
@@ -548,10 +588,10 @@
                       </div>
                     </div>
                     <div class="col-1">
-                      <img alt="icon" src="img/svg/chart.svg">
+                      <img data-bs-toggle="modal" data-bs-target="#chartModal" class="cursor" alt="icon" src="img/svg/chart.svg">
                     </div>
                     <div class="col-1">
-                      <a class="w-48 h-32 mx-auto d-flex align-items-center justify-content-center rounded-10 bg-main">
+                      <a class="w-48 h-32 button-hover-1 mx-auto d-flex align-items-center justify-content-center rounded-10 bg-main">
                         <img alt="icon" src="img/svg/shopping-cart.svg">
                       </a>
                     </div>
@@ -570,10 +610,10 @@
                       </div>
                     </div>
                     <div class="col-1">
-                      <img alt="icon" src="img/svg/chart.svg">
+                      <img data-bs-toggle="modal" data-bs-target="#chartModal" class="cursor" alt="icon" src="img/svg/chart.svg">
                     </div>
                     <div class="col-1">
-                      <a class="w-48 h-32 mx-auto d-flex align-items-center justify-content-center rounded-10 bg-main">
+                      <a class="w-48 h-32 button-hover-1 mx-auto d-flex align-items-center justify-content-center rounded-10 bg-main">
                         <img alt="icon" src="img/svg/shopping-cart.svg">
                       </a>
                     </div>
@@ -592,10 +632,10 @@
                       </div>
                     </div>
                     <div class="col-1">
-                      <img alt="icon" src="img/svg/chart.svg">
+                      <img data-bs-toggle="modal" data-bs-target="#chartModal" class="cursor" alt="icon" src="img/svg/chart.svg">
                     </div>
                     <div class="col-1">
-                      <a class="w-48 h-32 mx-auto d-flex align-items-center justify-content-center rounded-10 bg-main">
+                      <a class="w-48 h-32 button-hover-1 mx-auto d-flex align-items-center justify-content-center rounded-10 bg-main">
                         <img alt="icon" src="img/svg/shopping-cart.svg">
                       </a>
                     </div>
@@ -614,10 +654,10 @@
                       </div>
                     </div>
                     <div class="col-1">
-                      <img alt="icon" src="img/svg/chart.svg">
+                      <img data-bs-toggle="modal" data-bs-target="#chartModal" class="cursor" alt="icon" src="img/svg/chart.svg">
                     </div>
                     <div class="col-1">
-                      <a class="w-48 h-32 mx-auto d-flex align-items-center justify-content-center rounded-10 bg-main">
+                      <a class="w-48 h-32 button-hover-1 mx-auto d-flex align-items-center justify-content-center rounded-10 bg-main">
                         <img alt="icon" src="img/svg/shopping-cart.svg">
                       </a>
                     </div>
@@ -636,10 +676,10 @@
                       </div>
                     </div>
                     <div class="col-1">
-                      <img alt="icon" src="img/svg/chart.svg">
+                      <img data-bs-toggle="modal" data-bs-target="#chartModal" class="cursor" alt="icon" src="img/svg/chart.svg">
                     </div>
                     <div class="col-1">
-                      <a class="w-48 h-32 mx-auto d-flex align-items-center justify-content-center rounded-10 bg-main">
+                      <a class="w-48 h-32 button-hover-1 mx-auto d-flex align-items-center justify-content-center rounded-10 bg-main">
                         <img alt="icon" src="img/svg/shopping-cart.svg">
                       </a>
                     </div>
@@ -658,10 +698,10 @@
                       </div>
                     </div>
                     <div class="col-1">
-                      <img alt="icon" src="img/svg/chart.svg">
+                      <img data-bs-toggle="modal" data-bs-target="#chartModal" class="cursor" alt="icon" src="img/svg/chart.svg">
                     </div>
                     <div class="col-1">
-                      <a class="w-48 h-32 mx-auto d-flex align-items-center justify-content-center rounded-10 bg-main">
+                      <a class="w-48 h-32 button-hover-1 mx-auto d-flex align-items-center justify-content-center rounded-10 bg-main">
                         <img alt="icon" src="img/svg/shopping-cart.svg">
                       </a>
                     </div>
@@ -680,10 +720,10 @@
                       </div>
                     </div>
                     <div class="col-1">
-                      <img alt="icon" src="img/svg/chart.svg">
+                      <img data-bs-toggle="modal" data-bs-target="#chartModal" class="cursor" alt="icon" src="img/svg/chart.svg">
                     </div>
                     <div class="col-1">
-                      <a class="w-48 h-32 mx-auto d-flex align-items-center justify-content-center rounded-10 bg-main">
+                      <a class="w-48 h-32 button-hover-1 mx-auto d-flex align-items-center justify-content-center rounded-10 bg-main">
                         <img alt="icon" src="img/svg/shopping-cart.svg">
                       </a>
                     </div>
@@ -1025,37 +1065,37 @@
                     <div class="row g-5 mt-3 align-items-start">
                      <div class="col-md-6">
                        <div>
-                        <a class="d-flex align-items-center gap-4 mb-4">
+                        <a class="d-flex align-items-center gap-4 mb-4 blog-hover">
                          <div class="position-relative flex-shrink-0">
                           <p class="fw-bold text-white mb-0 bottom-8 start-0 m-3 bg-second py-1 px-3 position-absolute rounded-pill">PRESS RELEASE</p>
                           <img alt="img" src="img/Rectangle 33.png" class="img-fluid rounded-16 w-100">
                          </div>
                          <div>
-                          <p class="fs-20 font-bold text-dark mb-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</p>
+                          <h2 class="fs-20 font-bold text-dark mb-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</h2>
                           <p class="text-secondary fs-18 text-justify mb-0">
                             لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، 
                           </p>
                         </div>
                         </a>
-                        <a class="d-flex align-items-center gap-4 mb-4">
+                        <a class="d-flex align-items-center gap-4 mb-4 blog-hover">
                           <div class="position-relative flex-shrink-0">
                            <p class="fw-bold text-white mb-0 bottom-8 start-0 m-3 bg-second py-1 px-3 position-absolute rounded-pill">NEWS</p>
                            <img alt="img" src="img/Rectangle 34.png" class="img-fluid rounded-16 w-100">
                           </div>
                           <div>
-                           <p class="fs-20 font-bold text-dark mb-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</p>
+                           <h2 class="fs-20 font-bold text-dark mb-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</h2>
                            <p class="text-secondary fs-18 text-justify mb-0">
                              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، 
                            </p>
                          </div>
                          </a>
-                         <a class="d-flex align-items-center gap-4">
+                         <a class="d-flex align-items-center gap-4 blog-hover">
                           <div class="position-relative flex-shrink-0">
                            <p class="fw-bold text-white mb-0 bottom-8 start-0 m-3 bg-second py-1 px-3 position-absolute rounded-pill">NEWS</p>
                            <img alt="img" src="img/Group 43.png" class="img-fluid rounded-16 w-100">
                           </div>
                           <div>
-                           <p class="fs-20 font-bold text-dark mb-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</p>
+                           <h2 class="fs-20 font-bold text-dark mb-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</h2>
                            <p class="text-secondary fs-18 text-justify mb-0">
                              لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، 
                            </p>
@@ -1064,13 +1104,13 @@
                        </div>
                      </div>
                      <div class="col-md-6">
-                      <div class="d-flex flex-column align-items-center gap-4 mb-5">
+                      <div class="d-flex flex-column align-items-center gap-4 mb-5 blog-hover">
                         <div class="position-relative flex-shrink-0 w-100">
                          <p class="fw-bold text-white mb-0 bottom-8 start-0 m-3 bg-second py-1 px-3 position-absolute rounded-pill">NEWS</p>
                          <img alt="img" src="img/Rectangle 32.png" class="img-fluid rounded-16 w-100">
                         </div>
                         <div>
-                         <p class="fs-20 font-bold text-dark mb-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است،</p>
+                         <h2 class="fs-20 font-bold text-dark mb-2">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است،</h2>
                          <p class="text-secondary fs-18 text-justify mb-0">
                           لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است،  چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، 
                          </p>
@@ -1230,22 +1270,22 @@
              <div class="d-flex align-items-center gap-4">
               <p class="mb-0 fs-18 font-bold text-white">مارو دنبال کنید :</p>
               <div class="d-flex align-items-center gap-3">
-                <a class="d-flex align-items-center justify-content-center bg-white rounded-circle w-32 h-32">
+                <a class="social-hover d-flex align-items-center justify-content-center bg-white rounded-circle w-32 h-32">
                   <svg width="19" height="15" viewBox="0 0 19 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M9.77267 14.5036C11.5657 14.5036 13.3588 14.4847 15.1519 14.5099C16.9565 14.5351 18.2076 13.1891 18.5189 11.7425C18.5881 11.4343 18.6227 11.1072 18.6227 10.7865C18.6342 8.67318 18.6284 6.55989 18.6284 4.44659C18.6227 2.31443 17.164 0.716876 15.2095 0.716876C11.5773 0.710587 7.94501 0.710587 4.31853 0.716876C2.37556 0.716876 0.916898 2.32072 0.911133 4.43401C0.911133 6.5536 0.911133 8.67318 0.911133 10.7928C0.916898 12.8557 2.31214 14.4533 4.19745 14.491C6.05394 14.5288 7.91619 14.4973 9.77267 14.5036ZM7.46071 10.5601C7.46071 8.56626 7.46071 6.61649 7.46071 4.63528C9.01163 5.62903 10.5395 6.60392 12.0962 7.59767C10.5337 8.59771 9.01163 9.5663 7.46071 10.5601Z" fill="#EA9117"/>
                   </svg>
                 </a>
-                <a class="d-flex align-items-center justify-content-center bg-white rounded-circle w-32 h-32">
+                <a class="social-hover d-flex align-items-center justify-content-center bg-white rounded-circle w-32 h-32">
                   <svg width="16" height="15" viewBox="0 0 16 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M15.2482 9.13337V14.4489H12.1665V9.48961C12.1665 8.24438 11.7216 7.39401 10.6057 7.39401C9.75424 7.39401 9.24839 7.96652 9.025 8.52087C8.94387 8.71898 8.92296 8.99409 8.92296 9.27196V14.4487H5.84098C5.84098 14.4487 5.88235 6.04927 5.84098 5.17982H8.92319V6.4933C8.91698 6.50365 8.90825 6.51376 8.90273 6.52364H8.92319V6.4933C9.33274 5.86311 10.0631 4.96217 11.7006 4.96217C13.7282 4.96217 15.2482 6.28692 15.2482 9.13337ZM2.61697 0.711914C1.56276 0.711914 0.873047 1.40393 0.873047 2.31314C0.873047 3.20305 1.54276 3.91506 2.57652 3.91506H2.59652C3.67142 3.91506 4.33975 3.20305 4.33975 2.31314C4.3193 1.40393 3.67142 0.711914 2.61697 0.711914ZM1.05622 14.4489H4.13705V5.17982H1.05622V14.4489Z" fill="#EA9117"/>
                   </svg>
                 </a>
-                <a class="d-flex align-items-center justify-content-center bg-white rounded-circle w-32 h-32">
+                <a class="social-hover d-flex align-items-center justify-content-center bg-white rounded-circle w-32 h-32">
                   <svg width="17" height="14" viewBox="0 0 17 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M16.5316 2.20394C15.956 2.4592 15.3368 2.63184 14.6874 2.70895C15.3505 2.31169 15.8593 1.68312 16.0994 0.932908C15.479 1.30095 14.7916 1.56794 14.0605 1.71186C13.4749 1.08808 12.6404 0.698242 11.7164 0.698242C9.94349 0.698242 8.50561 2.13617 8.50561 3.9091C8.50561 4.16077 8.5341 4.40573 8.58917 4.64088C5.92077 4.50702 3.55479 3.22881 1.97108 1.28563C1.69476 1.75975 1.53625 2.31169 1.53625 2.90003C1.53625 4.01374 2.1035 4.99695 2.96455 5.5726C2.43848 5.55607 1.94307 5.41168 1.51039 5.17055C1.51015 5.1842 1.51015 5.19785 1.51015 5.21126C1.51015 6.767 2.61735 8.06461 4.08588 8.35938C3.81674 8.43313 3.53252 8.47216 3.24015 8.47216C3.03279 8.47216 2.8319 8.45229 2.63603 8.41493C3.04453 9.69027 4.23003 10.6186 5.63535 10.6447C4.53628 11.5061 3.15204 12.0192 1.64735 12.0192C1.38875 12.0192 1.13254 12.0041 0.881836 11.9742C2.302 12.8856 3.9901 13.4169 5.8032 13.4169C11.7089 13.4169 14.9386 8.52436 14.9386 4.28098C14.9386 4.14185 14.9355 4.00321 14.9293 3.86576C15.5571 3.41319 16.1014 2.84783 16.5316 2.20394Z" fill="#EA9117"/>
                   </svg>
                 </a>
-                <a class="d-flex align-items-center justify-content-center bg-white rounded-circle w-32 h-32">
+                <a class="social-hover d-flex align-items-center justify-content-center bg-white rounded-circle w-32 h-32">
                   <svg width="9" height="18" viewBox="0 0 9 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M8.43146 9.33472H6.07678V17.9614H2.50924V9.33472H0.8125V6.30296H2.50924V4.34107C2.50924 2.93811 3.17565 0.741211 6.10854 0.741211L8.75114 0.752267V3.69511H6.83376C6.51925 3.69511 6.07701 3.85225 6.07701 4.5215V6.30579H8.74314L8.43146 9.33472Z" fill="#EA9117"/>
                   </svg>
@@ -1259,16 +1299,22 @@
           <div class="bg-main3 py-3">
              <div class="container d-flex align-items-center justify-content-between gap-2">
               <div class="d-flex align-items-center gap-4 fs-12">
-                <a class="text-white">سیاست حفظ حریم خصوصی</a>
-                <a class="text-white">شرایط و ضوابط</a>
+                <a class="text-white second-hover">سیاست حفظ حریم خصوصی</a>
+                <a class="text-white second-hover">شرایط و ضوابط</a>
                </div>
                <p class="mb-0 text-white fs-12">© Copyright 2024. طراحی  و توسعه اکسین صنعت</p>
              </div>
           </div>
         </div>
        </footer>
+
+       <!-- to top -->
+        <a href="#" id="goToUp" class="bg-second button-hover-2 button-hover-3 d-flex align-items-center justify-content-center w-42 h-42 rounded-5 position-fixed bottom-0 end-0 m-5 z-10">
+         <img alt="icon" src="img/svg/Arrow Icon (2).svg">
+        </a>
     
     <script src='js/swiper.min.js'></script>
+    <script src='js/chart.js'></script>
     <script src='js/scripts.js'></script>
     <script src='js/bootstrap.bundle.min.js'></script>
 </body>
