--- a/index.html
+++ b/index.html
@@ -16,18 +16,87 @@
 </head>
 <body>
 
-  <!-- Modal -->
-<div class="modal fade p-4" id="chartModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- login && register Modal -->
+    <div class="modal fade p-4" id="loginModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered max-w-979">
+        <div class="modal-content rounded-43">
+          <div class="modal-body p-4">
+              <div class="row g-4">
+                <div class="col-5">
+                  <h2 class="font-bold text-center fs-32 my-4">ثبت نام</h2>
+                  <ul class="nav nav-pills bg-main5 max-w-224 p-2 mx-auto rounded-pill d-flex justify-content-center mb-0 p-0 fs-14 font-bold" id="pills-tab" role="tablist">
+                    <li class="nav-item flex-grow-1 rounded-pill" role="presentation">
+                      <button class="nav-link text-white py-2 w-100 active" id="pills-home2-tab" data-bs-toggle="pill" data-bs-target="#pills-home2" type="button" role="tab" aria-controls="pills-home2" aria-selected="true">ماهانه</button>
+                    </li>
+                    <li class="nav-item flex-grow-1 rounded-pill" role="presentation">
+                      <button class="nav-link text-white py-2 w-100" id="pills-profile2-tab" data-bs-toggle="pill" data-bs-target="#pills-profile2" type="button" role="tab" aria-controls="pills-profile2" aria-selected="false">3 ماهه</button>
+                    </li>
+                  </ul>
+                <div class="tab-content mt-4" id="pills-tabContent">
+                  <div class="tab-pane fade show active" id="pills-home2" role="tabpanel" aria-labelledby="pills-home2-tab" tabindex="0">
+                     <p class="text-secondary fs-12">
+                      لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم
+                     </p>
+                  </div>
+                  <div class="tab-pane fade" id="pills-profile2" role="tabpanel" aria-labelledby="pills-profile2-tab" tabindex="0">
+                   
+                  </div>
+                </div>
+                </div>
+                <div class="col-7">
+                  <img alt="img" src="img/Group 231.png" class="rounded-20 w-100">
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+      </div>
+
+  <!-- chart Modal -->
+  <div class="modal fade p-4" id="chartModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered max-w-1200">
     <div class="modal-content rounded-25">
       <div class="modal-body">
-        <figure class="highcharts-figure">
-          <div id="container"></div>
-      </figure>
+        <div class="d-flex align-items-center justify-content-between flex-wrap gap-3 my-4 mx-5">
+          <div class="d-flex align-items-center gap-2">
+            <img alt="icon" src="img/svg/calendar.svg">
+            <p class="font-bold text-second mb-0">آخرین بروزرسانی :</p>
+            <p class="font-bold mb-0">1403/12/23</p>
+          </div>
+          <h4 class="fs-24 font-bold mb-0 text-main2">نمودار تغییرات قیمت تیرآهن 12 ذوب آهن اصفهان</h4>
+          <ul class="nav nav-pills border rounded-12 mb-0 p-0 fs-14 font-bold" id="pills-tab" role="tablist">
+            <li class="nav-item" role="presentation">
+              <button class="nav-link text-dark py-3 active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">ماهانه</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link text-dark py-3" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">3 ماهه</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link text-dark py-3" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">سالانه</button>
+            </li>
+          </ul>
+        </div>
+        <div class="tab-content" id="pills-tabContent">
+          <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
+            <figure class="highcharts-figure">
+              <div id="container"></div>
+          </figure>
+          </div>
+          <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
+            <figure class="highcharts-figure">
+              <div id="container2"></div>
+          </figure>
+          </div>
+          <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">
+            <figure class="highcharts-figure">
+              <div id="container3"></div>
+          </figure>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
+  </div>
 
 
 <div class="ld-form d-none">
@@ -274,7 +343,7 @@
              <p class="mb-0 fw-bold">0919456789</p>
              <img alt="icon" src="img/svg/call-calling.svg">
             </a>
-            <a class="h-46 w-46 button-hover-2 d-flex align-items-center justify-content-center rounded-circle bg-second">
+            <a data-bs-toggle="modal" data-bs-target="#loginModal" class="h-46 w-46 button-hover-2 d-flex align-items-center justify-content-center rounded-circle bg-second">
               <img alt="icon" src="img/svg/user.svg">
             </a>
             <a class="h-46 w-46 button-hover-2 d-flex align-items-center justify-content-center rounded-circle bg-second">
@@ -464,8 +533,8 @@
                   <p class="mb-0 fs-20 text-main2 font-bold">آخرین بروزرسانی : 3 روز پیش</p>
                 </div>
                 <div class="rounded-25 shadow-2 my-5 bg-white overflow-hidden">
-                 <div class="position-relative mx-5 p-5">
-                  <div dir="ltr" class="swiper priceList">
+                 <div class="position-relative mx-5 p-5 pb-3">
+                  <div dir="ltr" class="swiper priceList h-213">
                     <div class="swiper-wrapper">
                       <div class="swiper-slide text-center">
                         <svg class="d-block mx-auto mb-3" width="120" height="89" viewBox="0 0 120 89" fill="none" xmlns="http://www.w3.org/2000/svg">
