--- a/index.html
+++ b/index.html
@@ -37,9 +37,44 @@
                      <p class="text-secondary fs-12">
                       لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم
                      </p>
+                     <form class="mt-4">
+                      <div class="mb-4">
+                        <label class="fs-14">شماره موبایل</label>
+                        <input class="outline-none w-100 border-main d-block mt-2 p-3 fs-12 rounded-pill" placeholder="شماره موبایل خود را وارد کنید">
+                      </div>
+                      <div class="mb-4">
+                        <label class="fs-14">ایمیل</label>
+                        <input class="outline-none w-100 border-main d-block mt-2 p-3 fs-12 rounded-pill" placeholder="آدرس ایمیل خود را وارد کنید">
+                      </div>
+                      <div class="mb-4">
+                        <label class="fs-14">رمز عبور</label>
+                        <div class="border-main mt-2 rounded-pill position-relative">
+                          <input class="outline-none w-100 p-3 border-0 d-block fs-12" placeholder="رمز عبور خود را ثبت کنید">
+                          <img alt="icon" src="img/svg/invisible 1.svg" class="position-absolute start-0 top-0 m-18 cursor">
+                        </div>
+                      </div>
+                      <button class="font-bold rounded-pill bg-second text-white d-block w-160 h-38 button-hover-2 border-0"><span>ثبت</span></button>
+                     </form>
                   </div>
                   <div class="tab-pane fade" id="pills-profile2" role="tabpanel" aria-labelledby="pills-profile2-tab" tabindex="0">
-                   
+                    <p class="text-secondary fs-12">
+                      لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم لورم ایپسوم
+                     </p>
+                     <form class="mt-4">
+                      <div class="mb-4">
+                        <label class="fs-14">شماره موبایل</label>
+                        <input class="outline-none w-100 border-main d-block mt-2 p-3 fs-12 rounded-pill" placeholder="شماره موبایل خود را وارد کنید">
+                      </div>
+                      <div class="mb-5">
+                        <label class="fs-14">رمز عبور</label>
+                        <div class="border-main mt-2 rounded-pill position-relative">
+                          <input class="outline-none w-100 p-3 border-0 d-block fs-12" placeholder="رمز عبور خود را ثبت کنید">
+                          <img alt="icon" src="img/svg/invisible 1.svg" class="position-absolute start-0 top-0 m-18 cursor">
+                        </div>
+                        <a class="fs-14 text-second d-inline-block text-second mt-3">رمز عبور خود را فراموش کردم !</a>
+                      </div>
+                      <button class="font-bold rounded-pill bg-second text-white d-block w-160 h-38 button-hover-2 border-0"><span>ثبت</span></button>
+                     </form>
                   </div>
                 </div>
                 </div>
