--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                   <h2 class="font-bold text-center fs-32 my-4">ثبت نام</h2>
                   <ul class="nav nav-pills bg-main5 max-w-224 p-2 mx-auto rounded-pill d-flex justify-content-center mb-0 p-0 fs-14 font-bold" id="pills-tab" role="tablist">
                     <li class="nav-item flex-grow-1 rounded-pill" role="presentation">
-                      <button class="nav-link text-white py-2 w-100 active" id="pills-home2-tab" data-bs-toggle="pill" data-bs-target="#pills-home2" type="button" role="tab" aria-controls="pills-home2" aria-selected="true">ماهانه</button>
+                      <button class="nav-link text-white py-2 w-100 active" id="pills-home2-tab" data-bs-toggle="pill" data-bs-target="#pills-home2" type="button" role="tab" aria-controls="pills-home2" aria-selected="true">ثبت نام</button>
                     </li>
                     <li class="nav-item flex-grow-1 rounded-pill" role="presentation">
-                      <button class="nav-link text-white py-2 w-100" id="pills-profile2-tab" data-bs-toggle="pill" data-bs-target="#pills-profile2" type="button" role="tab" aria-controls="pills-profile2" aria-selected="false">3 ماهه</button>
+                      <button class="nav-link text-white py-2 w-100" id="pills-profile2-tab" data-bs-toggle="pill" data-bs-target="#pills-profile2" type="button" role="tab" aria-controls="pills-profile2" aria-selected="false">ورود</button>
                     </li>
                   </ul>
                 <div class="tab-content mt-4" id="pills-tabContent">
@@ -158,9 +158,10 @@
     <!-- header -->
      <header class="py-4">
         <div class="container d-flex align-items-center justify-content-between gap-3">
-           <div class="d-flex align-items-center gap-4">
-             <a><img alt="logo" src="img/photo_5911433497355075833_y 1.png" class="img-fluid w-65"></a>
-             <ul class="fw-bold p-0 mb-0 list-unstyled d-flex align-items-center gap-5">
+           <div class="d-flex align-items-center gap-xl-4 gap-2">
+            <img alt="icon" src="img/svg/menu.svg" class="cursor d-xl-none">
+             <a class="flex-shrink-0"><img alt="logo" src="img/photo_5911433497355075833_y 1.png" class="img-fluid w-sm-28 w-65"></a>
+             <ul class="fw-bold p-0 mb-0 list-unstyled d-xl-flex d-none align-items-center gap-5">
                 <li class="text-main">
                     <a>خانه</a>
                 </li>
@@ -373,15 +374,15 @@
                 </li>
              </ul>
            </div>
-           <div class="d-flex align-items-center gap-4">
+           <div class="d-flex align-items-center gap-3 gap-sm-4">
             <a class="rounded-pill button-hover-2 h-46 bg-second d-flex align-items-center gap-3 text-white px-4">
-             <p class="mb-0 fw-bold">0919456789</p>
+             <p class="mb-0 fw-bold fs-sm-12">0919456789</p>
              <img alt="icon" src="img/svg/call-calling.svg">
             </a>
             <a data-bs-toggle="modal" data-bs-target="#loginModal" class="h-46 w-46 button-hover-2 d-flex align-items-center justify-content-center rounded-circle bg-second">
               <img alt="icon" src="img/svg/user.svg">
             </a>
-            <a class="h-46 w-46 button-hover-2 d-flex align-items-center justify-content-center rounded-circle bg-second">
+            <a class="h-46 w-46 button-hover-2 d-xl-flex d-none align-items-center justify-content-center rounded-circle bg-second">
                 <img alt="icon" src="img/svg/bag.svg">
               </a>
            </div>
@@ -393,16 +394,16 @@
         
         <!-- live price -->
          <section class="mt-3">
-            <div class="container">
-              <div class="bg-main rounded-12 py-3 px-4 d-flex align-items-center gap-5">
+            <div class="container px-0 px-sm-3">
+              <div class="bg-main rounded-12 rounded-sm-0 py-sm-3 py-2 px-sm-4 px-2 d-flex align-items-center gap-sm-5 gap-4">
                <div class="d-flex align-items-center gap-2 flex-shrink-0">
                 <img alt="icon" src="img/svg/Container.svg">
-                <p class="mb-0 fs-14 text-white fw-bold">آخرین قیمت‌ها:</p>
+                <p class="mb-0 fs-14 fs-sm-8 text-white fw-bold">آخرین قیمت‌ها:</p>
                </div>
                <div class="flex-grow-1 swiper livePriceSwiper">
                 <div class="swiper-wrapper">
                  <div class="swiper-slide">
-                   <div class="d-flex align-items-center gap-3 fs-12 text-white">
+                   <div class="d-flex align-items-center gap-2 md:gap-3 fs-12 fs-sm-8 fs-md-10 text-white">
                      <p class="mb-0"> ذوب آهن اصفهان:</p>
                      <p class="mb-0">31,000 تومان</p>
                      <img alt="icon" src="img/svg/Vector.svg">
@@ -410,7 +411,7 @@
                    </div>
                  </div>
                  <div class="swiper-slide">
-                   <div class="d-flex align-items-center gap-3 fs-12 text-white">
+                   <div class="d-flex align-items-center gap-2 md:gap-3 fs-12 fs-sm-8 fs-md-10 text-white">
                      <p class="mb-0"> ذوب آهن اصفهان:</p>
                      <p class="mb-0">31,000 تومان</p>
                      <img alt="icon" src="img/svg/Vector(1).svg">
@@ -418,7 +419,7 @@
                    </div>
                  </div>
                  <div class="swiper-slide">
-                   <div class="d-flex align-items-center gap-3 fs-12 text-white">
+                   <div class="d-flex align-items-center gap-2 md:gap-3 fs-12 fs-sm-8 fs-md-10 text-white">
                      <p class="mb-0"> ذوب آهن اصفهان:</p>
                      <p class="mb-0">31,000 تومان</p>
                      <img alt="icon" src="img/svg/Vector.svg">
@@ -426,7 +427,7 @@
                    </div>
                  </div>
                  <div class="swiper-slide">
-                   <div class="d-flex align-items-center gap-3 fs-12 text-white">
+                   <div class="d-flex align-items-center gap-2 md:gap-3 fs-12 fs-sm-8 fs-md-10 text-white">
                      <p class="mb-0"> ذوب آهن اصفهان:</p>
                      <p class="mb-0">31,000 تومان</p>
                      <img alt="icon" src="img/svg/Vector(1).svg">
@@ -434,7 +435,7 @@
                    </div>
                  </div>
                  <div class="swiper-slide">
-                   <div class="d-flex align-items-center gap-3 fs-12 text-white">
+                   <div class="d-flex align-items-center gap-2 md:gap-3 fs-12 fs-sm-8 fs-md-10 text-white">
                      <p class="mb-0"> ذوب آهن اصفهان:</p>
                      <p class="mb-0">31,000 تومان</p>
                      <img alt="icon" src="img/svg/Vector.svg">
@@ -442,7 +443,7 @@
                    </div>
                  </div>
                  <div class="swiper-slide">
-                   <div class="d-flex align-items-center gap-3 fs-12 text-white">
+                   <div class="d-flex align-items-center gap-2 md:gap-3 fs-12 fs-sm-8 fs-md-10 text-white">
                      <p class="mb-0"> ذوب آهن اصفهان:</p>
                      <p class="mb-0">31,000 تومان</p>
                      <img alt="icon" src="img/svg/Vector(1).svg">
@@ -488,70 +489,78 @@
                 </div>
               </div>
               <div class="position-absolute start-0 w-47 px-0 z-10 top-189">
-               <div class="bg-main rounded-tr-112 rounded-br-9 pb-4">
+               <div class="bg-main rounded-tr-112 rounded-br-9 pb-5">
                   <img alt="img" src="img/pipe-steel-construction-stack-realistic 2.png" class="img-fluid d-block me-auto position-relative -top-165">
-                  <h1 class="text-white font-bold fs-64 -mt-167 px-4">
-                    محصولات فولادی 
+                  <h1 class="text-white font-bold fs-56 -mt-255 px-4 position-relative">
+                    محصولات فولادی <br>
 صنعتی و ساختمانی
                   </h1>
+                  <div class="ms-xl-5 ps-xl-4">
+                    <form class="bg-white shadow-5 mt-4 position-relative rounded-20 overflow-hidden mx-4 ms-5 h-70 d-flex align-items-center gap-3">
+                      <input class="fs-20 border-0 fw-bold outline-none w-100 bg-white flex-grow-1 pe-3" placeholder="به دنبال چه محصولی هستی ؟">
+                      <button class="button-hover-2 flex-shrink-0 w-70 h-70 d-flex align-items-center justify-content-center bg-second border-0 rounded-20">
+                        <img alt="icon" src="img/svg/search-normal.svg">
+                      </button>
+                     </form>
+                  </div>
                 </div>
               </div>
             </div>
           </section>
 
           <!-- category -->
-           <section id="category" class="bg-gray py-5 position-relative">
+           <section id="category" class="bg-gray py-md-5 position-relative">
             <!-- shape -->
              <img alt="shape" src="img/circle.png" class="position-absolute end-0 -z-0 -top-165">
             <!--  -->
-            <div class="container py-5 position-relative">
-             <h1 class="fs-40 font-bold text-main2">دسته بندی محصولات</h1>
-             <div class="position-relative mt-5">
-               <div dir="ltr" class="swiper category mt-5 py-5 px-3">
+            <div class="container pt-4 pt-md-5 pb-0 pb-md-5 position-relative">
+             <h1 class="fs-40 fs-sm-20 font-bold text-main2">دسته بندی محصولات</h1>
+             <div class="position-relative mt-md-5">
+               <div dir="ltr" class="swiper category mt-md-5 py-md-5 py-4 px-3">
                  <div class="swiper-wrapper">
                    <div class="swiper-slide position-relative">
                     <div class="rounded-3px rounded-tr-34 bg-main -top-2 -right-3 w-100 h-100 position-absolute"></div>
                      <a class="bg-white d-block rounded-4 rounded-tr-34 text-center p-4 position-relative">
-                        <img alt="img" src="img/pipe-steel-construction-realistic_01 3.png" class="d-block mx-auto w-100 h-140">
-                        <h2 class="text-main font-bold fs-24 mt-4">ورق آلومینیومی</h2>
+                        <img alt="img" src="img/pipe-steel-construction-realistic_01 3.png" class="d-block mx-auto w-100 h-md-auto h-140">
+                        <h2 class="text-main font-bold fs-24 fs-sm-12 mt-4">ورق آلومینیومی</h2>
                      </a>
                    </div>
                    <div class="swiper-slide position-relative">
                     <div class="rounded-3px rounded-tr-34 bg-main -top-2 -right-3 w-100 h-100 position-absolute"></div>
                      <a class="bg-white d-block rounded-4 rounded-tr-34 text-center p-4 position-relative">
-                        <img alt="img" src="img/pipe-steel-construction-realistic_01 2.png" class="d-block mx-auto w-100 h-140">
-                        <h2 class="text-main font-bold fs-24 mt-4">میلگرد</h2>
+                        <img alt="img" src="img/pipe-steel-construction-realistic_01 2.png" class="d-block mx-auto w-100 h-md-auto h-140">
+                        <h2 class="text-main font-bold fs-24 fs-sm-12 mt-4">میلگرد</h2>
                      </a>
                    </div>
                    <div class="swiper-slide position-relative">
                     <div class="rounded-3px rounded-tr-34 bg-main -top-2 -right-3 w-100 h-100 position-absolute"></div>
                      <a class="bg-white d-block rounded-4 rounded-tr-34 text-center p-4 position-relative">
-                        <img alt="img" src="img/pipe-steel-construction-realistic_01 2(2).png" class="d-block mx-auto w-100 h-140">
-                        <h2 class="text-main font-bold fs-24 mt-4">میلگرد</h2>
+                        <img alt="img" src="img/pipe-steel-construction-realistic_01 2(2).png" class="d-block mx-auto w-100 h-md-auto h-140">
+                        <h2 class="text-main font-bold fs-24 fs-sm-12 mt-4">میلگرد</h2>
                      </a>
                    </div>
                    <div class="swiper-slide position-relative">
                     <div class="rounded-3px rounded-tr-34 bg-main -top-2 -right-3 w-100 h-100 position-absolute"></div>
                      <a class="bg-white d-block rounded-4 rounded-tr-34 text-center p-4 position-relative">
-                        <img alt="img" src="img/pipe-steel-construction-realistic_01 2(1).png" class="d-block mx-auto w-100 h-140">
-                        <h2 class="text-main font-bold fs-24 mt-4">میلگرد</h2>
+                        <img alt="img" src="img/pipe-steel-construction-realistic_01 2(1).png" class="d-block mx-auto w-100 h-md-auto h-140">
+                        <h2 class="text-main font-bold fs-24 fs-sm-12 mt-4">میلگرد</h2>
                      </a>
                    </div>
                    <div class="swiper-slide position-relative">
                     <div class="rounded-3px rounded-tr-34 bg-main -top-2 -right-3 w-100 h-100 position-absolute"></div>
                      <a class="bg-white d-block rounded-4 rounded-tr-34 text-center p-4 position-relative">
-                        <img alt="img" src="img/pipe-steel-construction-realistic_01 3.png" class="d-block mx-auto w-100 h-140">
-                        <h2 class="text-main font-bold fs-24 mt-4">ورق آلومینیومی</h2>
+                        <img alt="img" src="img/pipe-steel-construction-realistic_01 3.png" class="d-block mx-auto w-100 h-md-auto h-140">
+                        <h2 class="text-main font-bold fs-24 fs-sm-12 mt-4">ورق آلومینیومی</h2>
                      </a>
                    </div>
                  </div>
                </div>
-               <div class="swiper-button-next2 position-absolute">
+               <div class="swiper-button-next2 d-none d-xl-flex position-absolute">
                 <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M8.27288 17.8187L15.0911 11.0006L8.27288 4.18237" stroke="#363A3D" stroke-width="1.36364" stroke-linecap="round" stroke-linejoin="round"/>
                   </svg>
                </div>
-               <div class="swiper-button-prev2 position-absolute">
+               <div class="swiper-button-prev2 d-none d-xl-flex position-absolute">
                 <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M13.7275 17.8181L6.90936 10.9999L13.7275 4.18175" stroke="#363A3D" stroke-width="1.36364" stroke-linecap="round" stroke-linejoin="round"/>
                   </svg>
@@ -843,9 +852,9 @@
                <img alt="shape" src="img/pipe-steel-construction-stack-realistic 3.png" class="position-absolute end-0 -top-123">
               <!--  -->
               <div class="container py-4">
-               <h3 class="fs-24 font-bold text-second text-center">برنامه کاری اکسین صنعت</h3>
+               <h3 class="fs-32 font-bold text-second text-center">برنامه کاری اکسین صنعت</h3>
                <h1 class="fs-40 font-bold text-main2 text-center mt-3">مراحل خرید از اکسین صنعت</h1>
-               <div class="mt-5">
+               <div class="mt-4">
                 <div class="row pt-5">
                  <div class="col-lg-3">
                   <div class="d-flex align-items-center gap-4">
@@ -854,7 +863,7 @@
                       <img alt="icon" src="img/svg/Add your image here.svg">
                     </div>
                     <div>
-                      <h6 class="font-bold">ثبت سفارش</h6>
+                      <h6 class="font-bold fs-20">ثبت سفارش</h6>
                       <p class="fs-12 mt-3 text-secondary text-justify">
                         لورم ایپسوم متن ساختگی با تولید
 سادگی نامفهوم از صنعت چاپ و با
@@ -870,7 +879,7 @@
                       <img alt="icon" src="img/svg/Add your image here (2).svg">
                     </div>
                     <div>
-                      <h6 class="font-bold">ثبت سفارش</h6>
+                      <h6 class="font-bold fs-20">ثبت سفارش</h6>
                       <p class="fs-12 mt-3 text-secondary text-justify">
                         لورم ایپسوم متن ساختگی با تولید
 سادگی نامفهوم از صنعت چاپ و با
@@ -886,7 +895,7 @@
                       <img alt="icon" src="img/svg/Add your image here(1).svg">
                     </div>
                     <div>
-                      <h6 class="font-bold">ثبت سفارش</h6>
+                      <h6 class="font-bold fs-20">ثبت سفارش</h6>
                       <p class="fs-12 mt-3 text-secondary text-justify">
                         لورم ایپسوم متن ساختگی با تولید
 سادگی نامفهوم از صنعت چاپ و با
@@ -902,7 +911,7 @@
                       <img alt="icon" src="img/svg/Add your image here(2).svg">
                     </div>
                     <div>
-                      <h6 class="font-bold">ثبت سفارش</h6>
+                      <h6 class="font-bold fs-20">ثبت سفارش</h6>
                       <p class="fs-12 mt-3 text-secondary text-justify">
                         لورم ایپسوم متن ساختگی با تولید
 سادگی نامفهوم از صنعت چاپ و با
